@@ -1,3 +1,7 @@
+2003-03-06    John E. Joganic <john@joganic.com>
+
+	* Applied Ping Cheng's suppress patch
+
 2003-02-22    John E. Joganic <john@joganic.com>
 
 	* Applied Ping Cheng's multi-monitor patch
